- Added delete prefs button (again, thanks to gilshahar7 for the suggestions)
- Horizontal scrolling indicator is now hidden
- Added option to completely hide the phone battery in kai
- Helped resolve issues with AirPod device grouping being buggy, and cells would jump around (WIP)

1.1.1:
- Added a label to make it clear when the tweak was not yet activated, and license needed to be downloaded.
- Fixed issues with licenses not activating
- Added @vanwijkdave to credits in prefs for the header cell (sorry for not adding you before, this was overlooked)
- My credit cell now links my Twitter account
- Under the hood optimizations for keeping track of connected devices

1.1.2:
- Fixed cells still showing after device was disconnected (they will now remove as soon as they disappear from stock battery widget)
- Improve memory management within cells
- Fixed issue where the tweak would not disable in 1.1.1 and would always be on

1.1.3:
- Fixed compatibility for my upcoming tweak, Aperio
- Automatic alignment in horizontal mode should feel a lot snappier now

1.1.3-1:
- Compiled with latest DragonBuild
- Removed armv7 slice to reduce binary size

1.2.0:
- Large improvements to kai's auto alignment
- Fixes issues where kai would always re align when opening notification center

1.2.1:
- Add an option to hide kai when media player is showing on the lock screen (kai will be shown again once music player is removed from the lock screen)
- Fixed issues with vertical mode alignment

1.3.0:
- kai is now free!
- General improvements, new prefs banner

1.3.1:
- Fix very unoptimized code, made it more-ish optimized
- Below music option now moves kai just below the media controls, and not to the very bottom.
- Fixed kai going below Axon with below music player option on

1.4.0:
- Adds iOS 14 support

1.5.0:
- Replace the code that handles hiding kai when media plays
- Fix edge cases where battery info would not update completely until an update was called for again